--- a/src/pages/internProfile/internProfile.module.scss
+++ b/src/pages/internProfile/internProfile.module.scss
@@ -7,8 +7,12 @@
   }
 
   &__card {
-    background: rgba(25.88, 25.88, 25.88, 0.25);
-    box-shadow: 0px 10px 80px rgba(0, 0, 0, 0.75);
+    // background: rgba(25.88, 25.88, 25.88, 0.25);
+    // box-shadow: 0px 10px 80px rgba(0, 0, 0, 0.75);
+    border-radius: 20px;
+    background: rgba(26, 26, 26, 0.7);
+    box-shadow: 0px 10px 80px 0px rgba(0, 0, 0, 0.75);
+    backdrop-filter: blur(50px);
     border-radius: 20px;
     border: 2px white solid;
     backdrop-filter: blur(65px);
